--- a/app/views/home/_products.html.slim
+++ b/app/views/home/_products.html.slim
@@ -4,11 +4,11 @@
     .container
       - @products.each do |product|
         .product
-          = link_to (image_tag product.variants.first.picture.url(:medium)), admin_product_path(product)
+          = link_to (image_tag product.variants.first.picture.url(:medium)), product_path(product)
           .product-action
             i.fa.fa-eye
           .product-description
-            .product-name
-              = link_to product.name, admin_product_path(product)
+            .user-product-name
+              = link_to product.name, product_path(product)
             .product-price
-              = link_to product.variants.first.price, admin_product_path(product)
+              = link_to product.variants.first.price, product_path(product)
