--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -1,14 +1,12 @@
 .row
   .col-md-12= link_to t('.back_to_products'), products_path
-.row id="product_#{@product.id}"
-  .col-md-9.block
-    .row id="product_#{@product.id}"
-        .row
-          .col-md-3= @product.name
-          .col-md-6= @product.description
-          .col-md-3= render partial: 'rate'
-  .col-md-3.block
-    .row
-      .col-md-12= link_to t('.to_wishes'), wish_add_path(@variants.first), remote: true if @variants.present?
-.row#new_comment_form
-  = render partial: '/reviews/reviews'
+  .row
+    br
+    .col-md-1
+    .col-md-5.show-menu
+      = render partial: 'show_left_panell'
+    .col-md-6
+      .productsrow
+        = render partial: 'show_right_panell'
+  .row-fluid#new_comment_form
+    = render partial: '/reviews/reviews'
