--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -108,11 +108,8 @@ body {
   }
   .product {
     float: left;
-    border: 1px solid #9c9ba2;
-    height: 230px;
     width: 350px;
     margin: 20px 20px;
-    border-radius: 10px;
     .product-action {
       visibility:hidden;
       height: 0;
@@ -127,23 +124,33 @@ body {
     .product-description {
       float: left;
       width: 100%;
-      height: 40px;
       padding-top: 5px;
+      border: 1px solid #808080;
+      -webkit-box-shadow: -1px 2px 8px 3px rgba(173,173,173,1);
+      -moz-box-shadow: -1px 2px 8px 3px rgba(173,173,173,1);
+      box-shadow: -1px 2px 8px 3px rgba(173,173,173,1);
       .product-name {
         float: left;
-        width: 80%;
+        width: 70%;
         height: 40px;
         color: #008000;
         padding-left: 10px;
       }
       .product-price {
         float: left;
-        width: 20%;
+        width: 30%;
         height: 40px;
         color: grey;
         text-align: right;
         padding-right: 10px;
       }
+      .product-text-description {
+        font-size: 13px;
+        margin-bottom: 10px;
+        padding-left: 10px;
+      }
+
+
     }
   }
   .product:hover {
@@ -160,6 +167,11 @@ body {
     border-radius: 10px;
   }
 }
+
+#paginator {
+  padding-left: 80px;
+}
+
 input[type="submit"] {
   width: 100px;
 }
