--- a/app/views/products/_product.html.slim
+++ b/app/views/products/_product.html.slim
@@ -1,3 +1,11 @@
-.row.block id="product_#{product.id}"
-  .col-md-2= link_to product.name, product_path(product)
-  .col-md-6= product.description
+.product id="product_#{product.id}"
+  = link_to (image_tag product.variants.first.picture.url(:medium)), product_path(product)
+  .product-action
+    i.fa.fa-eye
+  .product-description
+    .product-name
+      = link_to product.name, product_path(product)
+    .product-price
+      = link_to product.variants.first.price, product_path(product)
+    .product-text-description
+      = product.description
