--- a/app/views/products/_products.html.slim
+++ b/app/views/products/_products.html.slim
@@ -1,5 +1,7 @@
 - if @products.any?
-  = render partial: 'product', collection: @products
+  .products
+    .container
+      = render partial: 'product', collection: @products
   #paginator
     = paginate @products, remote: true, param_name: 'product_page'
 - else
