--- a/app/views/admin/products/_form.html.slim
+++ b/app/views/admin/products/_form.html.slim
@@ -1,40 +1,42 @@
-.modal-header.distance
-  h3 Add Product
-.modal-body
-  .row.distance
-    = form_for @product, url: url, method: method, builder: StandartBuilder do |f|
-      .row
-        = f.error_messages
-      .row
-        .col-md-3= f.label t('.name')
-        .col-md-6= f.text_field :name
-      .row
-        .col-md-3= f.label t('.description')
-        .col-md-6= f.text_field :description
-      .row
-        .col-md-3= f.label t('.assortment')
-        .col-md-6= f.collection_select :assortment_id, @assortments, :id, :name, prompt: true
-      br
-      -5.times do
-        = f.fields_for :variants, @product.variants.build do |v|
-          .row
-            .col-md-3
-              = v.label t('.price')
-              = v.text_field :price
-            .col-md-2
-              = v.label t('.color')
-              = v.collection_select :color_id, @colors, :id, :name, prompt: true
-            .col-md-2
-              = v.label t('.size')
-              = v.collection_select :size_id, @sizes, :id, :name, prompt: true
-            .col-md-1
-              = v.label t('.in_stock')
-              = v.check_box :in_stock, {}, 'true', 'false'
-            .col-md-1
-              = v.label :picture, t('.picture')
-            .col-md-3
-              = v.file_field :picture
-          hr
-      .row
-        .col-md-10
-        .col-md-2= f.submit t('save')
+.distance
+
+  .text-center
+    h3 Add Product
+.row.distance
+  = form_for @product, builder: StandartBuilder do |f|
+    .row
+      = f.error_messages
+    .row
+      .col-md-2= f.label t('.name')
+      .col-md-6= f.text_field :name
+    .row
+      .col-md-2= f.label t('.description')
+      .col-md-6= f.text_field :description
+    .row
+      .col-md-2= f.label t('.assortment')
+      .col-md-6= f.collection_select :assortment_id, @assortments, :id, :name, prompt: true
+    br
+    -5.times do
+      = f.fields_for :variants, @product.variants.build do |v|
+        .row
+          .col-md-3
+            = v.label t('.price')
+            = v.text_field :price
+          .col-md-2
+            = v.label t('.color')
+            = v.collection_select :color_id, @colors, :id, :name, prompt: true
+          .col-md-2
+            = v.label t('.size')
+            = v.collection_select :size_id, @sizes, :id, :name, prompt: true
+          .col-md-1
+            = v.label t('.in_stock')
+            = v.check_box :in_stock, {}, 'true', 'false'
+          .col-md-1
+            = v.label :picture, t('.picture')
+          .col-md-3
+            = v.file_field :picture
+        hr
+    .row
+      .col-md-9
+      .col-md-1.distance= f.submit t('save')
+      .col-md-1 = link_to t('cancel'), admin_root_path, class: 'btn btn-default cancel'
